--- a/map.html
+++ b/map.html
@@ -6,10 +6,10 @@
 <body>
 	<img src="map.jpg" usemap="#map">
 	<map name="map">
-	<area shape="poly" coords="688,229,605,277,605,372,688,421,772,371,772,277"  href="#-blank">
+	<area shape="poly" coords="688,229,605,277,605,372,688,421,772,371,772,277"  href="#">
 	<area shape="poly" coords="438,255,356,308,387,392,489,392,514,308" href="#">
-	<area shape="rec" coords="319,7,453,75" href="#-blank">
-	<area shape="circle" coords="86,284,64.5" href="#-blank">
+	<area shape="rec" coords="319,7,453,75" href="#">
+	<area shape="circle" coords="86,284,64.5" href="#">
 </map>
 	
 
