--- a/map.html
+++ b/map.html
@@ -10,7 +10,16 @@
 	<area shape="poly" coords="438,255,356,308,387,392,489,392,514,308" href="#">
 	<area shape="rec" coords="319,7,453,75" href="#">
 	<area shape="circle" coords="86,284,64.5" href="#">
+        <area shape="poly" coords="723,26,702,85,638,105,702,124,723,182,743,124,807,105,745,35" href="#">
+        <area shape="rec" coords="73,49,311,196" href="#">
+        <area shape="poly" coords="204,264,127,412,277,412" href="#">
+        <area shape="circle" coords ="508,136,77.5" href"#">
+     
+      
+
 </map>
+
+
 	
 
 
